Add to from day configurable in config files

--- a/CI-EasyFly/CI-EasyFly/App.config
+++ b/CI-EasyFly/CI-EasyFly/App.config
@@ -6,5 +6,7 @@
   <appSettings>
     <!-- Add the url for the api -->
     <add key="APIUrl" value="http://api.colombiainfo.org/" />
+    <add key="FromDay" value="10" />
+    <add key="ToDay" value="20" />
   </appSettings>
 </configuration>
